2009-04-17  Todd Zullinger  <tmz@pobox.com>

	Patch from: Tino Keitel

	* src/mp3file.c:
	  Prefer Audiophile (Album) over Radio (Track) gain.

	  Adjust the ordering of the tags checked.  We now check the APE
	  tag first, because if a user has set it they likely would want
	  to use that value instead of the one added automatically by
	  Lame at encode time.

	  Also resets GainData struct in mp3_get_track_ape_replaygain(),
	  so that we don't end up using some mix of data from the LAME
	  Tag and the APE tag for ReplayGain.

2009-04-17  Paul Richardson <phantom_sf at users.sourceforge.net>

	* Reverted src/mp3file.c and configure.in due to lack of released
	  taglib support. Branched existing code to branches/taglib-branch

2009-04-16  David Kohen <dudyk at users.sourceforge.net>

	* src/mp3file.c: added taglib support
	* configure.in: added tests and include for TagLib

2009-04-16  Daniele Forsi <dforsi at users.sourceforge.net>

	* data/gtkpod.glade: Fix Gtk-WARNING on GtkSpinButtons

2009-04-12  Todd Zullinger  <tmz@pobox.com>

	* src/mp3file.c: Define a convenient debug macro

	* src/repository.c: Fix entry widget names for Create
	  Repository window.  The names were changed to fix issues
	  caused during the glade file conversion to glade3, in svn
	  revision 2126

2009-03-17  Todd Zullinger  <tmzullinger at users.sourceforge.net>

	* src/mp3file.c:
	  Use LOCALDEBUG in mp3_get_track_*_replaygain().

	  This replaces commented out debug code, making it easier to
	  enable when needed.

	* src/mp3file.c:
	  Fix docs for mp3_get_track_lame_replaygain()

	* src/mp3file.c:
	  Clean up comments in mp3_get_track_ape_replaygain() and
	  remove some useless whitespace.

	* src/mp3file.c:
	  Fix id3_get_string typo (LOCALDEGUB -> LOCALDEBUG)

2009-03-16  Todd Zullinger  <tmzullinger at users.sourceforge.net>

	* src/mp3file.c (mp3_get_track_lame_replaygain):
	  Lame did not store ReplayGain values prior to 3.94b
